--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
     <script src="rockpaperscissors.js"></script>
 </head>
-<body>
-    
+<body> 
+    <button class="button rock">rock</button>
+    <button class="button paper">paper</button>
+    <button class="button scissor">scissor</button>
 </body>
 </html>
