gonna remove console now

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <button class="button rock">rock</button>
     <button class="button paper">paper</button>
     <button class="button scissor">scissor</button>
+    <div class=""></div>
 </body>
 </html>
